--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "rust_refactor"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
+authors = ["Ben Santora <bensatlantik@gmail.com>"]
+description = "A library for automated code refactoring in Rust."
 
 [dependencies]
+
+[dev-dependencies]
