--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2018"
 authors = ["Ben Santora <bensatlantik@gmail.com>"]
 description = "A library for automated code refactoring in Rust."
+license = "MIT"
 
 [dependencies]
 
